<?xml version="1.0"?>
<package>
  <name>livox_dedistortion_pkg</name>
  <version>0.0.0</version>

  <description>
    dekew
  </description>

  <maintainer email="dev@livoxtech.com">livox</maintainer>

  <license>BSD</license>

  <author email="dev@livoxtech.com">livox</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>livox_ros_driver</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
  </export>
</package>
